feat: integrate flutter_screenutil for responsive design across movie details and home sections
- Added flutter_screenutil dependency to pubspec.yaml for responsive UI.
- Updated various UI components in movie_card.dart, movie_info_row.dart, section_header.dart, and other files to use ScreenUtil for sizing and padding.
- Refactored padding, margin, and font sizes to be responsive based on screen size.
- Ensured consistent styling and layout adjustments across movie details and home sections.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -61,6 +61,7 @@
     "dontReceive": "لم تستلم البريد؟",
     "resend": "إعادة إرسال",
     "verificationSuccess": "تم التحقق من البريد الإلكتروني بنجاح",
+    "resendSuccess": "تم إعادة إرسال البريد الإلكتروني بنجاح",
     "invalidDataInput": "يرجى التحقق من المعلومات المدخلة والمحاولة مرة أخرى.",
   
     "networkRequestFailed": "خطأ في الشبكة: يرجى التحقق من اتصالك بالإنترنت والمحاولة مرة أخرى.",
@@ -130,6 +131,8 @@
     "confirm": "تأكيد",
     "deleteBookmark": "هل أنت متأكد أنك تريد حذف هذه المفضلة؟",
     "cancel": "إلغاء",
-    "delete": "حذف"
+    "delete": "حذف",
+
+    "noMovies": "لا يوجد أفلام متاحة"
   }
   
